--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -365,7 +365,7 @@ IP Addresses. We use IP addresses for purposes such as calculating site usage le
                     <center><img src="img/r.png" width="180px" /></center>
 
                 </div>
-                <div class="col-md-2 col-lg-2 col-xs-12 col-sm-12 " style="padding-top:10px;">
+                <div class="col-md-2 col-lg-2 col-xs-12 col-sm-12 " >
                        <center><img src="img/google.png" width="200px" /></center>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xs-12 col-sm-12">
