--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -44,7 +44,7 @@
                   <li><a href="#home-section" class="nav-link">Home</a></li>
                   <li><a href="#home-section" class="nav-link">About</a></li> 
                   <li><a href="#services-section" class="nav-link">Become a partner</a></li>
-                  <li><a href="#services-section" class="nav-link">Contact Us</a></li>
+                 
                 </ul>
               </nav>
 
@@ -428,11 +428,32 @@ IP Addresses. We use IP addresses for purposes such as calculating site usage le
                       <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Patner Portal</a>
+                      </li>
+                    <li class="nav-item">
                       <a class="nav-link" href="#">Privacy Policy</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Terms and Conditions</a>
+                      </li>
+                    <li class="nav-item">
                       <a class="nav-link " href="#">Contact Us</a>
                     </li>
+                  </ul>
+
+              </div>
+              <div class="col-md-12 mx-auto text-center">
+                <ul class="nav  justify-content-center">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#"><div class="footer-icon"><i class="fab fa-facebook"></i></div></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><div class="footer-icon"><i class="fab fa-twitter"></i></div></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#"><div class="footer-icon"><i class="fab fa-instagram"></i></div></a>
+                      </li>
+                   
                   </ul>
 
               </div>
