--- a/PSignIn.html
+++ b/PSignIn.html
@@ -82,10 +82,10 @@
                       <a class="nav-link" href="#">Patner Portal</a>
                     </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Privacy Policy</a>
+                    <a class="nav-link" href="http://127.0.0.1:5500/privacyPolicy.html">Privacy Policy</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Terms and Conditions</a>
+                      <a class="nav-link" href="http://127.0.0.1:5500/Terms.html">Terms and Conditions</a>
                     </li>
                   <li class="nav-item">
                     <a class="nav-link " href="#">Contact Us</a>
