--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -72,7 +72,7 @@
 
     <div class='header-banner jumbotron'  >
         <div class="row header-row" >
-            <div class="col-lg-5 col-md-5 col-xs-12 col-sm-12 mx-auto my-auto" style="padding:20px 0px 20px 0px">
+            <div class="col-lg-5 col-md-5 col-xs-12 col-sm-12 mx-auto my-auto header-text">
             <h1>Privacy Policy</h1>
             </div>
             <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 mx-auto my-auto" style="padding: 0px;" >
