--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -53,6 +53,8 @@
         <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
         <li><a href="about.html" class="nav-link">Become a Partner</a></li>
         <li>
+          <li><a href="about.html" class="nav-link">Contact Us</a></li>
+        <li>
           <li class=" dropdown">
             <a class="nav-link " href="#" id="navbarDropdownMenuLink78" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-gb"></span> <i class="fa fa-angle-down"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink78"> 
