--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -488,7 +488,7 @@
       </footer>  
        
           <div class="copyright" > 
-            <div class="row" style="padding: 0px;margin: 0px;">
+            <div class="row">
               <div class="col-md-6">
                 <a href="" class="c_link" style="color:#ccc;">Privacy Policy</a> |  <a href="" class="c_link" style="color:#ccc;">Terms and Conditions</a> 
               </div>
