--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -490,7 +490,7 @@
           <div class="copyright" > 
             <div class="row">
               <div class="col-md-6">
-                <a href="" class="c_link" style="color:#ccc;">Privacy Policy</a> |  <a href="" class="c_link" style="color:#ccc;">Terms and Conditions</a> 
+                <a href="" class="c_link" style="color:#ccc;">Privacy Policy</a> |  <a href="" class="c_link" style="color:#ccc;">Terms and Conditions</a> | <a href="" class="c_link" style="color:#ccc;">FAQs</a> 
               </div>
               <div class="col-md-6">&copy Copyright 2021 | All Rights Reserved by VOLO.</div>
           </div>
