--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -53,7 +53,7 @@
         <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
         <li><a href="about.html" class="nav-link">Become a Partner</a></li>
         <li>
-          <li><a href="about.html" class="nav-link">Contact Us</a></li>
+          <li><a href="about.html" class="nav-link">FAQs</a></li>
         <li>
           <li class=" dropdown">
             <a class="nav-link " href="#" id="navbarDropdownMenuLink78" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-gb"></span> <i class="fa fa-angle-down"></i></a>
@@ -490,7 +490,7 @@
           <div class="copyright" > 
             <div class="row">
               <div class="col-md-6">
-                <a href="" class="c_link" style="color:#ccc;">Privacy Policy</a> |  <a href="" class="c_link" style="color:#ccc;">Terms and Conditions</a> | <a href="" class="c_link" style="color:#ccc;">FAQs</a> 
+                <a href="" class="c_link" style="color:#ccc;">Privacy Policy</a> |  <a href="" class="c_link" style="color:#ccc;">Terms and Conditions</a>  
               </div>
               <div class="col-md-6">&copy Copyright 2021 | All Rights Reserved by VOLO.</div>
           </div>
