--- a/ContactUs.html
+++ b/ContactUs.html
@@ -179,7 +179,7 @@
                     </li>
                 
                   <li class="nav-item">
-                    <a class="nav-link " href="contactus.html">Contact Us</a>
+                    <a class="nav-link " href="contactUs.html">Contact Us</a>
                   </li>
                 </ul>
 
