--- a/Terms.html
+++ b/Terms.html
@@ -861,7 +861,7 @@
                     </li>
                 
                   <li class="nav-item">
-                    <a class="nav-link " href="contactus.html">Contact Us</a>
+                    <a class="nav-link " href="contactUs.html">Contact Us</a>
                   </li>
                 </ul>
 
