--- a/PSignIn copy.html
+++ b/PSignIn copy.html
@@ -99,7 +99,7 @@
                       <a class="nav-link" href="http://127.0.0.1:5500/Terms.html">Terms and Conditions</a>
                     </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="contactUs.html">Contact Us</a>
+                    <a class="nav-link " href="ContactUs.html">Contact Us</a>
                   </li>
                 </ul>
 
