--- a/SignUp.html
+++ b/SignUp.html
@@ -119,7 +119,7 @@
                     </li>
                 
                   <li class="nav-item">
-                    <a class="nav-link " href="contactUs.html">Contact Us</a>
+                    <a class="nav-link " href="ContactUs.html">Contact Us</a>
                   </li>
                 </ul>
 
