--- a/PSignIn.html
+++ b/PSignIn.html
@@ -13,12 +13,51 @@
    <script src="https://kit.fontawesome.com/e1e1ec4870.js" crossorigin="anonymous"></script>
 </head>
 <body class="login-page">
-  <div class="row">
-  <div class="col-md-12">
-    <a  href="index.html" class="btn btn-md btn-dark btn-return float-right header-button">Return Home</a>
-    <a href="SignUp.html" class="btn btn-md btn-info btn-return float-right header-button">Sign Up</a>
-</div>
-</div>
+  <div class="site-mobile-menu site-navbar-target">
+    <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close mt-3">
+        <span class="fas fa-times mobile_icon js-menu-toggle"></span>
+      </div>
+    </div>
+    <div class="site-mobile-menu-body"></div>
+  </div>
+  <header class="site-navbar site-navbar-target" role="banner" >
+      <div class="container">
+        <div class="row align-items-center position-relative">
+          <div class="col-lg-4">
+            <nav class="site-navigation text-right ml-auto " role="navigation">
+              <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="project.html" class="nav-link">About</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col-lg-4 text-center">
+              <div class="site-logo">
+                <a href="index.html"><img src="img/logo.png" width="120px" /></a>
+              </div>
+              <div class="ml-auto my-auto mx-auto toggle-button d-inline-block d-lg-none"><a href="#" class="mx-auto my-auto js-menu-toggle text-black"><span class="fas fa-bars mobile_icon h3 text-black"></span></a></div>
+              </div>
+              <div class="col-lg-4">
+                <nav class="site-navigation text-left mr-auto " role="navigation">
+                  <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
+                    <li><a href="SignUp.html" class="nav-link">Become a Partner</a></li>
+                    <li>
+                      <li><a href="FAQs.html" class="nav-link">FAQs</a></li>
+                    <li>
+                     <li class=" dropdown">
+                        <a class="nav-link " href="#" id="navbarDropdownMenuLink78" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-gb"></span> <i class="fa fa-angle-down"></i></a>
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink78"> 
+                              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-gb"></span> English</a> 
+                              <a class="dropdown-item" href=""><span class="flag-icon flag-icon-bh"></span> Arabic</a>
+                          </div>
+                    </li>
+                  </ul>
+                </nav>  
+              </div>
+          </div>
+        </div>
+  </header>
     <div class="container h-100 login-body">
         <div class="row h-100 justify-content-center align-items-center">
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 logo-s" >
