--- a/ContactUs.html
+++ b/ContactUs.html
@@ -47,7 +47,7 @@
                       <li><a href="FAQs.html" class="nav-link">FAQs</a></li>
                     <li>
                      <li class=" dropdown">
-                        <a class="nav-link " href="#" id="navbarDropdownMenuLink78" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-gb"></span> <i class="fa fa-angle-down"></i></a>
+                        <a class="nav-link " href="#" id="navbarDropdownMenuLink78" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-gb"></span> </a>
                           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink78"> 
                               <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-gb"></span> English</a> 
                               <a class="dropdown-item" href=""><span class="flag-icon flag-icon-bh"></span> Arabic</a>
