--- a/ContactUs.html
+++ b/ContactUs.html
@@ -128,7 +128,7 @@
         </div>
         <div class="col-md-12 col-xs-12">
           
-            <button type="button" class="btn  btn-block" value="Submit" onclick="submitData()" style="background-color: #6BC061;color:white">Submit</button>
+            <button type="button" class="btn contact-btn  btn-block" value="Submit" onclick="submitData()" >Submit</button>
         </div>
       </div>
           </form>
