--- a/SignUp.html
+++ b/SignUp.html
@@ -145,7 +145,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 my-auto">
     
-              <div class="footer-logo text-center my-auto"><img src="img/logo.png" width="200px" alt="logo">
+               <div class="footer-logo text-center my-auto"><img src="img/footer_logo.png" width="200px" alt="logo">
               </div>
             </div>
             <div class="col-md-4 mx-auto my-auto text-center">
