--- a/ContactUs.html
+++ b/ContactUs.html
@@ -35,7 +35,7 @@
           </div>
           <div class="col-lg-4 text-center">
               <div class="site-logo">
-                <a href="index.html"><img src="img/logo.png" width="120px" /></a>
+                <a href="index.html"><img src="img/logo.png" width="150px" /></a>
               </div>
               <div class="ml-auto my-auto mx-auto toggle-button d-inline-block d-lg-none"><a href="#" class="mx-auto my-auto js-menu-toggle text-black"><span class="fas fa-bars mobile_icon h3 text-black"></span></a></div>
               </div>
@@ -65,8 +65,10 @@
             <h1>Contact Us</h1>
         </div>
         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 mx-auto my-auto" style="padding: 0px;" >
-            <div class="header-box mx-auto my-auto">
-                  <img src="img/contact.png" class="header-icon mx-auto my-auto float-center"  height="200px" />
+            <div class="header-box mx-auto my-auto" style="padding-top: 25px;padding-bottom: 25px;">
+              <div class="mx-auto box" style="width: 150px; height: 150px; border-radius: 50%;background-color: #FDCC02;">
+                  <img src="img/contact.png" class="header-icon mx-auto my-auto float-center" style="padding-top: 40px;"  height="120px" />
+                </div>
               </div>
         </div>
       </div>
@@ -147,7 +149,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 my-auto">
     
-               <div class="footer-logo text-center my-auto"><img src="img/footer_logo.png" width="200px" alt="logo">
+               <div class="footer-logo text-center my-auto"><img src="img/footer_logo.png" class="rounded" width="200px" alt="logo">
               </div>
             </div>
             <div class="col-md-4 mx-auto my-auto text-center">
@@ -206,7 +208,7 @@
         </div>
         
     </footer>  
-     <div class="copyright" > 
+     <div class="copyright container-fluid" > 
             <div class="row">
               <div class="col-md-6">
                 <a href="privacyPolicy.html" class="c_link" style="color:#ccc;">Privacy Policy</a> |  <a href="Terms.html" class="c_link" style="color:#ccc;">Terms and Conditions</a>  
