--- a/PSignIn copy.html
+++ b/PSignIn copy.html
@@ -13,11 +13,33 @@
    <script src="https://kit.fontawesome.com/e1e1ec4870.js" crossorigin="anonymous"></script>
 </head>
 <body class="login-page">
-  <div class="row">
-  <div class="col-md-12">
-  <button class="btn btn-md btn-info btn-return float-right">Return Home</button>
-</div>
-</div>
+  <div class="container-fluid ">
+    <div class="row" style="padding:15px;">
+      <div class="col-md-6">
+        <a href="index.html">
+       
+        </a>
+      </div>
+      <div class="col-md-6">
+        <nav class="site-navigation float-right">
+        <ul class="nav justify-content-right">
+        <li class=" dropdown">
+          <a class="nav-link " href="#" id="navbarDropdownMenuLink78" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-gb"></span> </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink78"> 
+                <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-gb"></span> English</a> 
+                <a class="dropdown-item" href=""><span class="flag-icon flag-icon-bh"></span> Arabic</a>
+            </div>
+      </li>
+    
+     <li class="nav-item">
+      <a href="PSignIn.html" class="btn btn-md  btn-signin">Sign In</a>
+      </li>
+    </ul>
+    </nav>
+  
+    </div>
+    </div>
+    </div>
     <div class="container h-100 login-body">
         <div class="row h-100 justify-content-center align-items-center">
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 logo-s" >
