--- a/Terms.html
+++ b/Terms.html
@@ -40,7 +40,7 @@
           </div>
           <div class="col-lg-4 text-center">
               <div class="site-logo">
-                <a href="index.html"><img src="img/logo.png" width="120px" /></a>
+                <a href="index.html"><img src="img/logo.png" width="150px" /></a>
               </div>
               <div class="ml-auto my-auto mx-auto toggle-button d-inline-block d-lg-none"><a href="#" class="mx-auto my-auto js-menu-toggle text-black"><span class="fas fa-bars mobile_icon h3 text-black"></span></a></div>
               </div>
@@ -846,7 +846,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 my-auto">
     
-               <div class="footer-logo text-center my-auto"><img src="img/footer_logo.png" width="200px" alt="logo">
+               <div class="footer-logo text-center my-auto"><img src="img/footer_logo.png" class="rounded" width="200px" alt="logo">
               </div>
             </div>
             <div class="col-md-4 mx-auto my-auto text-center">
@@ -905,7 +905,7 @@
         </div>
         
     </footer>  
-     <div class="copyright" > 
+     <div class="copyright container-fluid" > 
             <div class="row">
               <div class="col-md-6">
                 <a href="privacyPolicy.html" class="c_link" style="color:#ccc;">Privacy Policy</a> |  <a href="Terms.html" class="c_link" style="color:#ccc;">Terms and Conditions</a>  
