--- a/PSignIn.html
+++ b/PSignIn.html
@@ -32,7 +32,7 @@
       </li>
     
      <li class="nav-item">
-      <a href="SignUp.html" class="btn btn-md  btn-signin">Sign Up</a>
+      <a href="SignUp.html" class="btn btn-md  btn-signin">Patner with Us</a>
       </li>
     </ul>
     </nav>
@@ -102,7 +102,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 my-auto">
     
-               <div class="footer-logo text-center my-auto"><img src="img/footer_logo.png" class="rounded" width="200px" alt="logo">
+               <div class="footer-logo text-center my-auto"><img src="img/footer_logo.png" class="footer-logo" width="200px" alt="logo">
               </div>
             </div>
             <div class="col-md-4 mx-auto my-auto text-center">
