--- a/SignUp.html
+++ b/SignUp.html
@@ -18,14 +18,14 @@
   <div class="signup-page">
   <div class="container-fluid ">
   <div class="row" style="padding:15px;">
-    <div class="col-md-6">
+    <div class="col-5" style="background-color: black;">
       <a href="index.html">
       <img src="img/logo.png" width="150px" />
       </a>
     </div>
-    <div class="col-md-6">
-      <nav class="site-navigation float-right">
-      <ul class="nav justify-content-right">
+    <div class="col-6 mx-auto my-auto">
+      <nav class="site-navigation float-right ">
+      <ul class="nav justify-content-right ">
       <li class=" dropdown">
         <a class="nav-link " href="#" id="navbarDropdownMenuLink78" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-gb"></span> </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink78"> 
