--- a/SignUp.html
+++ b/SignUp.html
@@ -18,7 +18,7 @@
   <div class="signup-page">
   <div class="container-fluid " >
   <div class="row" style="padding:15px;">
-    <div class="col-5" style="background-color: black;">
+    <div class="col-5">
       <a href="index.html">
       <img src="img/logo.png" width="120px" />
       </a>
