--- a/FAQs.html
+++ b/FAQs.html
@@ -412,9 +412,12 @@
         <div class="second_class" >
           <div class="container-fluid" >
           <div class="row">
-            <div class="col-md-4 col-sm-6 my-auto">
+          <div class="col-md-4 col-sm-6 my-auto">
     
-               <div class="footer-logo text-center my-auto"><img src="img/footer_logo.png" class="rounded" width="200px" alt="logo">
+               <div class="text-center my-auto ">
+                <div class="footer-logo my-auto mx-auto">
+                <img src="img/footer-logo.png" class="rounded" width="100px" alt="logo">
+                </div>
               </div>
             </div>
             <div class="col-md-4 mx-auto my-auto text-center">
