--- a/SignUp.html
+++ b/SignUp.html
@@ -77,8 +77,8 @@
                               </div>
                               <div class="col-12 ">
                                 <div class="form-label-group">
-                              <input type="text" id="inputCity" class="form-control login-input" placeholder="City" required>
-                                <label for="inputcity">City</label>
+                              <input type="text" id="inputCity" class="form-control login-input" placeholder="City" required autofocus>
+                                <label for="inputCity">City</label>
                                 </div>
                                   </div>
                               <div class="col-12 ">
