--- a/PSignIn.html
+++ b/PSignIn.html
@@ -74,7 +74,7 @@
                         </div>
                           </div>
                           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" style="margin-bottom:10px;">
-                              <input type="checkbox" class="checkbox" name="remember" id="remember"> Remember Me
+                              <input type="checkbox" class="checkbox" name="remember" id="remember" style="width: auto;"> Remember Me
                           
                           </div>
                           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" style="margin-bottom:10px;"><span class="psw float-lg-right float-md-right"><a href="/forgetPass">Forgot password?</a></span></div>
