--- a/SignUp.html
+++ b/SignUp.html
@@ -143,7 +143,7 @@
                                     <div class="form-label-group">
                                        
                                        <select name="pccode" class="form-control login-input">
-                                        <option value="">Code</option>
+                                        <option value="" hidden>Code</option>
                                           <option value="+973">+973</option>
                                           <option value="+966">+966</option>
                                           <option value="+965">+965</option>
