--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                </div>
             </div>
          </header>
-         <section class="home-top h-100">
-            <div class="container h-100 d-flex align-items-center justify-content-center " style="padding: 10px 20px 10px 20px;"  >
-               <div class="row d-flex align-items-center justify-content-center " >
-                  <div class="col-md-3 ">
+         <section class="home-top d-flex ">
+            <div class="container h-100  d-flex align-items-center justify-content-center " style="padding: 10px 20px 10px 20px;">
+               <div class="row d-flex align-items-center justify-content-center ">
+                  <div class="col-md-3 my-auto ">
                      <p class="float-right" style="color:#FDCA31;font-size:30px;">Flight to Fly</p>
                   </div>
-                  <div class="col-md-1">
+                  <div class="col-md-1 hidden-md">
                      <hr style="background-color: white; width: 100%;height: 1px;">
                   </div>
                   <div class="col-md-3" style="padding-bottom:20px;"> 
@@ -131,15 +131,16 @@
                         through the contact us page or via live chat in our app and we’ll work on making it happen.
                      </p>
                   </div>
-                  <div class="col-9" >
+                  <div class="col-lg-9 col-md-9 col-xs-12 col-sm-12" >
+                     
                      <div class="row mx-auto justify-content-center">
-                        <div class="col-md-4 mx-auto my-auto"  >
-                           <center><img src="img/apple_w.png"   /></center>
+                        <div class="col-md-4 mx-auto my-auto store-div"  >
+                           <center><img src="img/apple_w.png"  height="72px"  /></center>
                         </div>
-                        <div class="col-md-4 mx-auto my-auto" >
+                        <div class="col-md-4 mx-auto my-auto store-div" >
                            <center><img src="img/google_w.png"   height="70px" /></center>
                         </div>
-                        <div class="col-md-4 mx-auto my-auto" >
+                        <div class="col-md-4 mx-auto my-auto store-div" >
                            <center> <img src="img/huawei.png" height="70px"  /></center>
                         </div>
                      </div>
@@ -467,7 +468,7 @@
             
 
          </section>
-         <section class="howitwork" style="background-color:#FDCA31 ; min-height: 400px;padding: 50px 40px 40px 40px;">
+         <section class="howitwork" >
             <div class="container">
                <div class="row">
                   <div class="col-md-12 ">
@@ -564,7 +565,7 @@
 
          </section>
          <section>
-            <div class="signp-info" style="background-color: white;min-height: 300px;margin-bottom: -50px;padding:50px;">
+            <div class="why-volo" >
                <div class="container-fluid" style="padding:0px;margin:0px;">
                   <div class="col-md-12 ">
                      <center>
