--- a/SignUp.html
+++ b/SignUp.html
@@ -320,13 +320,13 @@
                      <div class="col-md-4 mx-auto my-auto text-center">
                         <ul class="nav nav-footer justify-content-center">
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Home</a>
+                              <a class="nav-link" href="index.html">Home</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">About</a>
+                              <a class="nav-link" href="FAQs.html">FAQ</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Patner Portal</a>
+                              <a class="nav-link" href="PSignIn.html">Patner Portal</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link " href="ContactUs.html">Contact Us</a>
