--- a/Terms.html
+++ b/Terms.html
@@ -34,7 +34,7 @@
             <nav class="site-navigation text-right ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="project.html" class="nav-link">About</a></li>
+                <li><a href="contactus.html" class="nav-link">Contact Us</a></li>
               </ul>
             </nav>
           </div>
@@ -855,13 +855,13 @@
             <div class="col-md-4 mx-auto my-auto text-center">
               <ul class="nav nav-footer justify-content-center">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="FAQs.html">FAQ</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Patner Portal</a>
+                      <a class="nav-link" href="PSignIn.html">Patner Portal</a>
                     </li>
                 
                   <li class="nav-item">
