--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -32,7 +32,7 @@
             <nav class="site-navigation text-right ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="contactus.html" class="nav-link">Contact Us</a></li>
+                <li><a href="ContactUs.html" class="nav-link">Contact Us</a></li>
               </ul>
             </nav>
           </div>
