--- a/Terms.html
+++ b/Terms.html
@@ -34,7 +34,7 @@
             <nav class="site-navigation text-right ml-auto " role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="contactus.html" class="nav-link">Contact Us</a></li>
+                <li><a href="ContactUs.html" class="nav-link">Contact Us</a></li>
               </ul>
             </nav>
           </div>
@@ -865,7 +865,7 @@
                     </li>
                 
                   <li class="nav-item">
-                    <a class="nav-link " href="contactUs.html">Contact Us</a>
+                    <a class="nav-link " href="ContactUs.html">Contact Us</a>
                   </li>
                 </ul>
 
