--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                      <nav class="site-navigation text-right ml-auto " role="navigation">
                         <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                            <li><a href="index.html" class="nav-link">Home</a></li>
-                           <li><a href="contactus.html" class="nav-link">Contact Us</a></li>
+                           <li><a href="ContactUs.html" class="nav-link">Contact Us</a></li>
                         </ul>
                      </nav>
                   </div>
@@ -784,7 +784,7 @@
                                  <a class="nav-link" href="PSignIn.html">Patner Portal</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link " href="contactus.html">Contact Us</a>
+                                 <a class="nav-link " href="ContactUs.html">Contact Us</a>
                               </li>
                            </ul>
                         </div>
