--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     
                   </div>
                   
-                  <div class="col-md-12"  id="page-content" style="margin-top: 20px;margin-bottom: 50px;">
+                  <div class="col-md-12"  id="page-content" >
                      <div class="row">
                         <div class="col">
                            <div class="owl-carousel owl-theme" id="owl-carousel">
