--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   </div>
             
                   
-                  <div class="col-md-12"  id="page-content" style="margin-bottom: 20px;">
+                  <div class="col-md-12"  id="page-content" >
                      <div class="row">
                         <div class="col">
                            <div class="owl-carousel owl-theme" id="owl-carousel3">
