--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -973,8 +973,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   
 </script>
 <a  href="#" data-toggle="modal" data-target="#trading">
-     <div class="row">
-  <div class="col-12 t-fixed ">
+     <div class="row" style="padding: 0px;margin: 0px;">
+  <div class="col-12 t-fixed " style="padding: 0px;margin: 0px;"> 
    
   </div>
   
