--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -27,6 +27,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <body class="hold-transition sidebar-mini">
   
 <div class="wrapper">
+  <div class="preloader flex-column justify-content-center align-items-center">
+    <img class="animation__shake" src="../img/loader.gif" alt="Volo" height="60" width="60">
+ </div>
   
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
