--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -27,8 +27,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <body class="hold-transition sidebar-mini">
   
 <div class="wrapper">
-  <div class="preloader flex-column justify-content-center align-items-center"> 
-    <img class="animation__shake" src="../img/footer-logo.png" width="120" height="120" />
+  <div class="preloader flex-column justify-content-center align-items-center"  > 
+    <img class="" src="../img/footer-logo.png" width="120" height="120" />
+    <img class="animation__shake" src="../img/loading.gif" width="120" height="120"  />
+
 
  </div>
   
