--- a/forgetPass.html
+++ b/forgetPass.html
@@ -216,7 +216,7 @@
                     
                     <div class="col-12">
                         
-                        <button class="btn btn-md btn-success float-right " data-dismiss="modal" aria-label="Close">
+                        <button class="btn btn-md  otp-btn float-right " data-dismiss="modal" aria-label="Close" >
                             <i class="fa fa-times"></i>
                         </button>
                     </div>
@@ -226,7 +226,7 @@
                             <div class="form-group">
                                 <input type="number" class="form-control" />
                             </div>
-                            <button class="btn btn-block btn-success">Confirm</button>
+                            <button class="btn btn-block otp-btn">Confirm</button>
                         </form>
                     </div>
 
