--- a/forgetPass.html
+++ b/forgetPass.html
@@ -40,14 +40,14 @@
     </div>
     </div>
     </div>
-    <div class="container h-100 forget-body">
-        <div class="row h-100 justify-content-center align-items-center">
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 logo-s" >
+    <div class="container forget-body">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 logo-s my-auto" >
             <a href="index.html">
           <center><img src="img/logo.png" height="150px" /></center>
           </a>
              </div>
-              <div class="col-lg-4 col-md-6 col-sm-8 col-xs-8 mx-auto forget-box" >
+              <div class="col-lg-4 col-md-6 col-sm-8 col-xs-8 mx-auto my-auto forget-box" >
                 <form id="LoginForm" onsubmit="return false">
                 <div class="row">
                   <div class="col-lg-12 col-md-10 col-sm-10 col-xs-8 mx-auto">
