--- a/forgetPass.html
+++ b/forgetPass.html
@@ -208,7 +208,7 @@
               <div class="col-md-6">&copy Copyright 2021 | All Rights Reserved by VOLO.</div>
       </div>
       <div class="modal fade" id="otp" tabindex="-1" role="dialog" aria-labelledby="OTP" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
           <div class="modal-content">
           
             <div class="modal-body">
