--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -114,33 +114,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 </a>
               </li>
           <li class="nav-item">
-            <a href="#" class="nav-link ">
+            <a href="order-history.html" class="nav-link ">
               <i class="nav-icon fas fa-shopping-bag"></i>
               <p>
-                Order's
-                <i class="right fas fa-angle-left"></i>
+                Order's History
+              
               </p>
             </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="#" class="nav-link ">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Active Orders</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link ">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Today's Orders</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Order's History</p>
-                </a>
-              </li>
-            </ul>
+           
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link ">
