--- a/forgetPass.html
+++ b/forgetPass.html
@@ -224,7 +224,7 @@
                         <p style="color: black;text-align: left;">We sent you a code via SMS, please enter it below</p>
                         <form>
                             <div class="form-group">
-                                <input type="number" class="form-control" />
+                                <input type="text" class="form-control" />
                             </div>
                             <button class="btn btn-block otp-btn">Confirm</button>
                         </form>
