--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -323,13 +323,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <div class="card-body" >
                 <div class="row  mx-auto justify-content-center">
                   <div class="col-md-4 top-btn">
-                    <button class="btn btn-info btn-block" data-toggle="modal" data-target="#active">Active orders</button>
+                    <button class="btn btn-info btn-block" data-toggle="modal" data-target="#active">Active orders (1)</button>
                   </div>
                   <div class="col-md-4 top-btn">
-                    <button class="btn btn-success btn-block" data-toggle="modal" data-target="#today">Today’s Orders</button>
+                    <button class="btn btn-success btn-block" data-toggle="modal" data-target="#today">Today’s Orders (2) </button>
                   </div>
                   <div class="col-md-4 top-btn">
-                    <button class="btn btn-danger btn-block" data-toggle="modal" data-target="#cancelled">Cancelled Orders</button>
+                    <button class="btn btn-danger btn-block" data-toggle="modal" data-target="#cancelled">Cancelled Orders (0)</button>
                   </div>
                  
                 </div>
