--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -78,12 +78,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Sidebar -->
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="company-img">
+      <div class="user-panel mt-3 pb-3 mb-3 d-flex brand-text ">
+        <div class="company-img ">
           <img src="../img/kfc.png" >
         </div>
         <div class="company-name">
-          <a href="#" class="d-block my-auto text-center">KFC</a>
+          <a href="#" class="">KFC</a>
         </div>
       </div>
 
