--- a/forgetPass.html
+++ b/forgetPass.html
@@ -278,7 +278,7 @@
                      </div>
                      <div class="col-12">
                        
-                            <button class="btn btn-block otp-btn" data-dismiss="modal">Rest Password</button>
+                            <button class="btn btn-block otp-btn" data-dismiss="modal">Confirm</button>
                           </div>
                         </form>
                     </div>
