--- a/patner-portal/order-history.html
+++ b/patner-portal/order-history.html
@@ -133,7 +133,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link ">
+                <a href="reservations.html" class="nav-link ">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Today Reservations's</p>
                 </a>
@@ -540,8 +540,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
       
         <div class="modal-body">
          Are you sure you want to decline the order?
-         <br>
+
          <div class="float-right">
+            <br>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-warning" data-dismiss="modal">Confirm</button>
          </div>
