--- a/SignUp.html
+++ b/SignUp.html
@@ -13,7 +13,7 @@
       <script src="https://kit.fontawesome.com/e1e1ec4870.js" crossorigin="anonymous"></script>
    </head>
    <body >
-      <div class="signup-page">
+      <div class="signup-page"  >
          <div class="container-fluid " >
             <div class="row" style="padding:15px;">
                <div class="col-5">
@@ -39,9 +39,9 @@
                </div>
             </div>
          </div>
-         <div class="container ">
-            <div class="row signup-body h-100 my-auto" >
-               <div class="col-lg-8 col-md-10 col-sm-8 col-xs-8 mx-auto my-auto signup-box align-self-center" >
+         <div class="container"  >
+            <div class="row signup-body my-auto" >
+               <div class="col-lg-8 col-md-10 col-sm-8 col-xs-8  signup-box my-auto mx-auto" >
                   <form id="LoginForm" onsubmit="return false">
                      <div class="row my-auto">
                         <div class="col-lg-12 col-md-10 col-sm-10 col-xs-8 mx-auto"  >
