--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -653,8 +653,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body ">
-        <div class="row">
+      <div class="modal-body order-popup ">
+        <div class="row ">
           <div class="col-12 justify-content-center">
             <center>
               <img src="../img/footer-logo.png" class="img-center" width="80px" />
@@ -792,7 +792,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </div>
         </div>
    
-      <div class="map">
+      <div class="order-map">
         <div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=Bahrain+(Volo)&amp;t=&amp;z=3&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
       </div>
 
@@ -1022,11 +1022,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script>
   $(function () {
     $("#example1").DataTable({
-      "lengthChange": true, "pageLength": 50, "lengthMenu": [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ],  "autoWidth": true,
+      "responsive": true,"lengthChange": true, "pageLength": 50, "lengthMenu": [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ],  "autoWidth": true,
       "buttons": ["copy",  "excel", "pdf", "print", "colvis"]
     }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
     $("#example2").DataTable({ 
-       "lengthChange": true, "pageLength": 50, "lengthMenu": [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ], "autoWidth": false,
+      "responsive": true, "lengthChange": true, "pageLength": 50, "lengthMenu": [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ], "autoWidth": false,
       "buttons": ["copy",  "excel", "pdf", "print", "colvis"]
     }).buttons().container().appendTo('#example2_wrapper .col-md-6:eq(0)');
     $("#example3").DataTable({
@@ -1034,7 +1034,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       "buttons": ["copy",  "excel", "pdf", "print", "colvis"]
     }).buttons().container().appendTo('#example3_wrapper .col-md-6:eq(0)');
     $("#example4").DataTable({
-       "lengthChange": true, "pageLength": 20, "lengthMenu": [ [5, 10, 20, 25, 50, -1], [5, 10, 20, 25, 50, "All"] ], "autoWidth": false,
+       "responsive": true, "lengthChange": true, "pageLength": 20, "lengthMenu": [ [5, 10, 20, 25, 50, -1], [5, 10, 20, 25, 50, "All"] ], "autoWidth": false,
       "buttons": ["copy", "excel", "pdf", "print", "colvis"]
     }).buttons().container().appendTo('#example4_wrapper .col-md-6:eq(0)');
     
