--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -355,7 +355,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                           <div class="progress-bar" style="width: 70%"></div>
                         </div>
                         <span class="progress-description">
-                          70% Increase in 30 Days
+                          70% Increase from last day
                         </span>
                       </div>
                       <!-- /.info-box-content -->
