--- a/patner-portal/reservations.html
+++ b/patner-portal/reservations.html
@@ -391,7 +391,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <div class="card-body">
                 <div class="row">
                   <div class="col-12" >
-                    <table id="reservations_request" class="table table-bordered " >
+                    <table id="reservations_request" class="table table-bordered table-responsive" >
                       <thead>
                       <tr>
                         <th>Reservation Date</th>
@@ -487,7 +487,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <div class="card-body">
                 <div class="row">
                   <div class="col-12" >
-                    <table id="upcoming_reservation" class="table table-bordered " >
+                    <table id="upcoming_reservation" class="table table-bordered table-responsive" >
                       <thead>
                       <tr>
                         <th>Reservation Date</th>
@@ -646,11 +646,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 </script>
 <a  href="#" data-toggle="modal" data-target="#trading">
      <div class="row" style="padding: 0px;margin: 0px;">
-  <div class="col-12 t-fixed " style="padding: 0px;margin: 0px;"> 
-   
-  </div>
-  
-</div>
+ 
 
 <div class="trading mx-auto" >
   <img src="../img/footer-logo.png"/>
