--- a/patner-portal/reservations.html
+++ b/patner-portal/reservations.html
@@ -663,7 +663,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
          
           <div class="col-4">
             <br>
-            <button type='button' class="btn btn-md btn-default" id='confirmTableBtn' onclick='updateTableNumber()'>Confirm</button>
+            <button type='button' class="btn btn-md btn-default" id='confirmTableBtn' onclick='updateTableNumber()' style="display: none;">Confirm</button>
           </div>
           <div class="col-8 text-right">
             <br>
