--- a/patner-portal/reservations.html
+++ b/patner-portal/reservations.html
@@ -70,8 +70,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4" >
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link mx-auto text-center" >
-      <img src="../img/footer-logo.png" alt="AdminLTE Logo" height="50px" >
+    <a href="main.html" class="brand-link mx-auto text-center" >
+      <img src="../img/footer-logo.png" alt="Volo Logo" height="50px" >
    
     </a>
 
@@ -950,9 +950,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
             display: block;
             width: 100%;
             overflow: none;
-            align-items: center
-            /*height: 40rem;*/
-            vertical-align: middle;
+            align-items: center;
+           
+          
             text-align: center;
             line-height: 30rem;
             font-size: 2rem;
@@ -1007,12 +1007,16 @@ scratch. This page gets rid of all links and provides the needed markup only.
   
 </script>
 <a  href="#" data-toggle="modal" data-target="#trading">
-     <div class="row" style="padding: 0px;margin: 0px;">
- 
+  <div class="row" style="padding: 0px;margin: 0px;">
+<div class="col-12 t-fixed " style="padding: 0px;margin: 0px;"> 
+
+</div>
+
+</div>
 
 <div class="trading mx-auto" >
-  <img src="../img/footer-logo.png"/>
-  <img src="../img/icon.png" class="img-top" alt="Card Front">
+<img src="../img/footer-logo.png"/>
+<img src="../img/icon.png" class="img-top" alt="Card Front">
 </div>
 
 </a>
