--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -385,7 +385,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <!-- /.col -->
                   <div class="col-md-4 col-sm-6 col-12">
                     <a href="#" data-toggle="modal" data-target="#cancelled">
-                    <div class="info-box bg-gradient-warning">
+                    <div class="info-box bg-gradient-danger">
                       <span class="info-box-icon"><i class="fas fa-times"></i></span>
         
                       <div class="info-box-content">
