--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -427,7 +427,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <table id="example1" class="table table-bordered  table-responsive" >
                       <thead>
                       <tr>
-                        <th></th>
+                        <th class="info-heading"></th>
                         <th>Order ID</th>
                         <th>Placed On</th>
                         <th>Pickup Time</th>
@@ -442,7 +442,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                       <tbody>
 
                       <tr>
-                        <td><button class="btn btn-md btn-default btn-more" data-toggle="modal" data-target="#orderdetail">+</button></td>
+                        <td class="more-info"><button class="btn btn-md btn-default btn-more" data-toggle="modal" data-target="#orderdetail">+</button></td>
                         <td>21BE0B82</td>
                         <td>23:33 11 July 2021</td>
                         <td>ASAP</td>
