--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -82,7 +82,7 @@
 
           </a>
           <div class="dropdown-divider"></div>
-          <a href="reservations.html" class="dropdown-item" >
+          <a href="#" class="dropdown-item" data-toggle="modal" data-target="#ordercomplete" >
             <div class="row">
               <div class="col-2 n-circle my-auto">
                 <i class="fas fa-times"></i>
@@ -1055,6 +1055,14 @@
                         <b>Pickup Time</b><br> ASAP
                      </div>
                      <div class="col-8 mx-auto text-center">
+                      <b>Name</b><br>
+                       Mohamed Jaffer	
+                     </div>
+                    <div class="col-8 mx-auto text-center">
+                      <b>Phone No</b><br>
+                      +973 0000000	
+                     </div>
+                     <div class="col-8 mx-auto text-center">
                         <b>Address</b><br>
                         Ryt Road: Rut Block: 608 Area: Arad Notes: none
                      </div>
@@ -1181,6 +1189,14 @@
                      </div>
                      <div class="col-12 text-center">
                         <b>Pickup Time</b><br> ASAP
+                     </div>
+                     <div class="col-8 mx-auto text-center">
+                      <b>Name</b><br>
+                       Mohamed Jaffer	
+                     </div>
+                    <div class="col-8 mx-auto text-center">
+                      <b>Phone No</b><br>
+                      +973 0000000	
                      </div>
                      <div class="col-8 mx-auto text-center">
                         <b>Address</b><br>
@@ -1310,6 +1326,14 @@
                      </div>
                      <div class="col-12 text-center">
                         <b>Pickup Time</b><br> ASAP
+                     </div>
+                     <div class="col-8 mx-auto text-center">
+                      <b>Name</b><br>
+                       Mohamed Jaffer	
+                     </div>
+                    <div class="col-8 mx-auto text-center">
+                      <b>Phone No</b><br>
+                      +973 0000000	
                      </div>
                      <div class="col-8 mx-auto text-center">
                         <b>Address</b><br>
