--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -54,7 +54,7 @@
          
           <a href="#" class="dropdown-item" data-toggle="modal" data-target="#orderdetail">
             <div class="row n-row">
-              <div class="col-2 n-circle my-auto">
+              <div class="col-2 n-circle ">
                 <i class="fas fa-shopping-bag"></i>
               </div>
               <div class="col-10 my-auto mx-auto " >
