--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -1637,7 +1637,12 @@
            </div>
         
             <form>
-               <div class="row" style="margin-top: 20px;">
+               <div class="row">
+                <div class="col-12 mx-auto justify-content-center">
+                  <h5 style="text-align: center;">Current Status
+                    <span class="badge badge-secondary" style="background-color: green;">On</span></h5>
+
+                </div>
                   <div class="col-md-12">
                      <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
@@ -1646,6 +1651,7 @@
                         </label>
                      </div>
                   </div>
+                 
                   <div class="col-md-12">
                      <div class="form-check">
                        <div class="row">
