--- a/patner-portal/promotions.html
+++ b/patner-portal/promotions.html
@@ -438,6 +438,13 @@
                                         <option value='all' name='all'>All items</option>
                                         <option value='category' name='category' >Some categories</option>
                                         <option value='items' name='items'>Some items</option>
+                                        <option value='items' name='items'>All items and DIY Items</option>
+
+                                        <option value='items' name='items'>Some DIY Items</option>
+
+                                        <option value='items' name='items'>Some DIY Categories</option>
+
+                                        
                                     </select>
                                     </div>
                                  </div>
@@ -590,7 +597,7 @@
                      <div class="col-lg-12">
                         <div class="card" id="complete">
                            <div class="card-header">
-                             <h3 class="card-title">Order's History</h3>
+                             <h3 class="card-title">Promotions</h3>
                            </div>
                            <!-- /.card-header -->
                            <div class="card-body">
