--- a/patner-portal/reservation-history.html
+++ b/patner-portal/reservation-history.html
@@ -1005,7 +1005,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   });
   
 </script>
-<a  href="#" data-toggle="modal" data-target="#reservationsettings">
+<a  href="#" >
   <div class="row" style="padding: 0px;margin: 0px;">
 <div class="col-12 t-fixed " style="padding: 0px;margin: 0px;"> 
 
