--- a/patner-portal/promotions.html
+++ b/patner-portal/promotions.html
@@ -708,6 +708,7 @@
                                      <th>Privacy</th>
                                      <th>Promo Code	</th>
                                      <th>Status</th>
+                                     <th>Used</th>
                                      <th>Remove</th>
 
                                    
@@ -723,7 +724,10 @@
                                      <td> All days		</td>
                                      <td>Public	</td>                     
                                      <td>none</td>                 
+                                     
                                      <td>Active</td>   
+                                     <td>2</td>   
+
                                      <td><button class="btn btn-md btn-block btn-danger" data-toggle="modal" data-target="#remove">Remove</button></td>
 
 
