--- a/SignUp2.html
+++ b/SignUp2.html
@@ -39,7 +39,7 @@
             </div>
          </div>
          <div class="container"  >
-            <div class="row signup-body my-auto" >
+            <div class="row signup2-body my-auto" >
                <div class="col-lg-8 col-md-10 col-sm-8 col-xs-8  my-auto mx-auto" >
                   <div class="row">
                      <div class="col-12">
