--- a/SignUp2.html
+++ b/SignUp2.html
@@ -947,8 +947,8 @@
                         <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
                            <div class="form-group">
                               <div class="form-label-group">
-                                 <input type="text" id="L_range" class="form-control login-input" placeholder="Store Name" required autofocus>
-                                 <label for="L_range">Long Range</label>
+                                 <input type="text" id="M_range" class="form-control login-input" placeholder="Store Name" required autofocus>
+                                 <label for="M_range">Medium Range</label>
                               </div>
                            </div>
                         </div>
